# claude-manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pipeline-state.json  pyproject.toml  requirements.txt  restart-claude-manager.sh  start-claude-manager.sh  watch_and_restart.sh
.agents/: codex-skill-adapter.md
.agents/skills/: .codex-skill-mirror-manifest.json  _shared-pipeline-scripts  _shared-validators  apply-root-cause-fixes  create-doc  development-process-retrospective  docs-index-updater  end-to-end-test-coverage  fast-skill-updater  feature-pipeline  human-in-the-loop-spec-reviewer  module-brd-generator  pipeline-designer  pipeline-explorer  pipeline-implementer  report-ui-redesign-orchestrator  root-cause-analysis  session-change-documenter 2  session-report-creator  single-script-creator  skill-creator  spec-creator  superpowers-implementation-orchestrator  test-guarded-refactoring  universal-bug-fixer  universal-skill 2  update-docs  update-skill
.claude/: settings.json
.claude/skills/: AGENTS.md  apply-root-cause-fixes  create-doc  development-process-retrospective  end-to-end-test-coverage  fast-skill-updater  feature-pipeline  human-in-the-loop-spec-reviewer  module-brd-generator  pipeline-designer  pipeline-explorer  (+10 more)
tests/: conftest.py  test_all_projects_monitor.py  test_all_projects_monitor_missing_reappear.py  test_bot.py  test_bot_handler_routing.py  test_claude_code_backend.py  test_claude_interaction.py  test_claude_runner.py  test_codex_backend.py  test_codex_backend_bot_mode_prompt.py  test_codex_session_file_listing.py  test_codex_session_index.py  test_codex_session_metadata.py  test_coding_agent_backend.py  test_config.py  test_current_backend_registry.py  test_daily_session_registry.py  test_file_delivery.py  test_file_sender.py  test_jsonl_incomplete_trailing_line_dropper.py  test_main.py  test_media_group_handler.py  test_message_splitter.py  test_openai_transcription.py  test_process_manager.py  test_project_manager.py  test_project_manager_pending_optimization.py  test_project_pending_delivery_behavior.py  test_project_pending_delivery_cursor_semantics.py  test_project_switch_handlers_behavior.py  test_recent_sessions_refresh.py  test_recent_sessions_store.py  test_reply_anchor_background_delivery.py  test_reply_anchor_direct_delivery.py  test_reply_anchor_input_candidates.py  test_reply_anchor_registry.py  test_reply_anchor_stop.py  test_reply_route_handler.py  test_reply_route_handler_background.py  test_reply_route_handler_error_results.py  (+28 more)
(+770 files in other folders)
