[project]
name = "claude-manager"
version = "0.1.0"
description = "Telegram-бот для управления Claude Code с телефона"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.10",
    "python-dotenv>=1.1.0",
]

[project.scripts]
claude-manager = "claude_manager.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
